INCLUDES = -I$(top_srcdir)/src/common -I$(top_srcdir)/src/newmat09

lib_LIBRARIES = libivf2d.a

libivf2d_a_SOURCES = Arrow.cpp \
	Base.cpp \
	Clipboard.cpp \
	Color.cpp \
	DrawableBase.cpp \
	Ellipse.cpp \
	Image.cpp \
	JpegImage.cpp \
	Line.cpp \
	PngImage.cpp \
	Point.cpp \
	Rectangle.cpp \
	ScreenImage.cpp \
	SgiImage.cpp \
	Shape.cpp \
	Texture.cpp \
	Vec3d.cpp \
	Arrow.h \
	Base.h \
	Clipboard.h \
	Color.h \
	CommonDefs.h \
	DrawableBase.h \
	Ellipse.h \
	force_config.h \
	Image.h \
	IvfDef.h \
	IvfPointer.h \
	JpegImage.h \
	Line.h \
	PngImage.h \
	Point.h \
	Rectangle.h \
	ScreenImage.h \
	SgiImage.h \
	Shape.h \
	Texture.h \
	Vec3d.h 

	

